履歴書・職務経歴書記入完了。このあと見直し

--- a/resume/data.yml
+++ b/resume/data.yml
@@ -8,7 +8,7 @@ cell_phone: 080-8364-5036
 email: maruisansmai@gmail.com
 
 # 住所
-address_kana: とうきょうとちよだくちよだ
+address_kana: ながさきけんにしそのきぐんながよちょううれりごう697ー1
 address: 長崎県西彼杵郡長与町嬉里郷697-1
 address_zip: 851-2128
 tel: 095-883-6595
@@ -59,7 +59,7 @@ licences:
   - 
     year: 2018
     month: 6
-    value: TOEFL 44点(TODO: あとで調べる)
+    value: TOEFL 41点
   - 
     year: 2021
     month: 3
@@ -79,12 +79,19 @@ supporting_spouse: なし
 
 #趣味
 hobby: |
-  読書、音楽鑑賞
+  勉強、読書、アニメ鑑賞、折紙
 
 #志望動機
 motivation: |
-  貴社の事業に共感を持ち、是非ご一緒に働きたいと思います。
+  アニメーションの世界に興味はありましたが、アニメを"作る"ことはできないだろうと思って視野にも入れてきませんでした。
+  しかし、この度社内エンジニアを募集されるとのことで、いてもたってもいられずに応募いたしました。
+  私は貴社の代表作であるヱヴァンゲリヲン新劇場版シリーズのファンです。
+  新劇場版では3DCGをはじめとした新しい方法や昔ながらの特撮の手法を取り入れたるなどして、常に映像制作に挑戦しつづけてらっしゃいました。
+  3DCGはアニメ作品にもよく使われるようになったとはいえ、まだまだ課題を抱えていらっしゃると思います。
+  そうした課題解決の一助になりたいと思っております。
+  また新型コロナウィルスの流行に伴い、テレワークを余儀無くされ思うように制作ができなかった瞬間もあったかと思います。
+  本応募では3DCGを中心とした課題解決の人材を募集しているかと思いますが、それ以外でもITとWebで解決できそうな課題には挑戦していきたいと思っております。
 
 # 本人希望記入欄
 request: |
-  貴社の規定に従います。
+  現在の業務が9月まで忙しいことが予測されるので、もし可能であれば業務開始を10月からにさせていただきたいです。
